--- a/css/styles.css
+++ b/css/styles.css
@@ -575,11 +575,16 @@ main {
   height: 40px;
   padding-left: 16px;
   padding-right: 16px;
-  border: 1px solid #fff;
+  border: 1px solid #ffffff;
   border-radius: 4px;
   width: 264px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
 }
 
 .ftr-input::placeholder {
@@ -587,7 +592,7 @@ main {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  color: #fff;
+  color: #ffffff;
 }
 
 .ftr-btn {
@@ -599,10 +604,10 @@ main {
   background: #4d5ae5;
   border-radius: 4px;
   /*padding: 8px 24px;*/
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   border: none;
-
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -617,7 +622,7 @@ main {
 }
 
 .ftr-btn-icon {
-  margin-left: 24px;
+  margin-left: 16px;
   fill: #fff;
   width: 24px;
   height: 28px;
