--- a/css/styles.css
+++ b/css/styles.css
@@ -505,10 +505,6 @@ main {
   margin-right: 120px;
 }
 
-.ftr-social {
-  margin-right: 80px;
-}
-
 .ftr-right {
   color: #f4f4fd;
 }
@@ -569,6 +565,10 @@ main {
   background-color: #31d0aa;
 }
 
+.ftr-subs {
+  margin-left: auto;
+}
+
 .ftr-input {
   background-color: transparent;
   max-width: 264px;
@@ -603,7 +603,7 @@ main {
   gap: 16px;
   background: #4d5ae5;
   border-radius: 4px;
-  /*padding: 8px 24px;*/
+  padding: 0;
   min-width: 165px;
   height: 40px;
   border: none;
@@ -638,9 +638,11 @@ main {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.is-open {
+.modal-backdrop.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
@@ -673,14 +675,23 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: background 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover {
   background: #404bbf;
+  border: none;
+}
+.modal-close-btn:focus {
+  background: #404bbf;
+  border: none;
 }
 
 .modal-close-btn:hover .modal-close-icon {
+  fill: #fff;
+}
+
+.modal-close-btn:focus .modal-close-icon {
   fill: #fff;
 }
 
@@ -690,11 +701,11 @@ main {
   height: 8px;
   z-index: 999;
   stroke-width: 1px;
-  transition: fill 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon {
-  transition: fill 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-header {
@@ -722,7 +733,12 @@ main {
   height: 40px;
   background-color: transparent;
   padding-left: 38px;
-  transition: border-color 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -773,10 +789,15 @@ main {
   width: 100%;
   height: 120px;
   background-color: transparent;
-  padding-left: 16px;
-  padding-top: 8px;
+  padding: 8px 16px;
   resize: none;
-  transition: border-color 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea:focus {
@@ -818,7 +839,7 @@ main {
   justify-content: center;
   align-items: center;
   fill: transparent;
-  transition: background-color 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-checkbox:checked + .modal-form-label-chek span {
@@ -837,9 +858,21 @@ main {
   color: #fff;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
   margin: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-btn:hover {
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal-form-btn:focus {
+  background-color: #404bbf;
+  border: none;
 }
