--- a/css/styles.css
+++ b/css/styles.css
@@ -660,6 +660,7 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 72px 24px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -726,7 +727,13 @@ main {
   gap: 8px;
 }*/
 
+.modal-form-label {
+  line-height: 1.17;
+  display: block;
+}
+
 .modal-input {
+  outline: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
@@ -791,7 +798,8 @@ main {
   background-color: transparent;
   padding: 8px 16px;
   resize: none;
-
+  line-height: 1.17;
+  outline: transparent;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16667;
@@ -857,7 +865,7 @@ main {
   text-align: center;
   color: #fff;
   border-radius: 4px;
-  padding: 16px 32px;
+  padding: 0;
   min-width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
