--- a/css/styles.css
+++ b/css/styles.css
@@ -672,11 +672,12 @@ main {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background: #e7e9fc;
-
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover {
@@ -833,7 +834,7 @@ main {
   color: #4d5ae5;
 }
 
-.modal-form-label-chek span {
+.modal-form-chek-span {
   width: 16px;
   height: 16px;
   border-radius: 2px;
