--- a/css/styles.css
+++ b/css/styles.css
@@ -849,7 +849,7 @@ main {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-checkbox:checked + .modal-form-label-chek span {
+.modal-checkbox:checked + .modal-form-label-chek .modal-form-chek-span {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
