--- a/css/styles.css
+++ b/css/styles.css
@@ -823,8 +823,8 @@ main {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: flex;
-  align-items: center;
+  /*display: flex;
+  align-items: center;*/
 }
 
 .modal-form-label-chek a {
